# 3d

./: .gitignore  .gitmodules
magnum/: CMakeLists.txt
magnum/src/: main.cpp
open3d/: CMakeLists.txt  Draw.cpp  TestVisualizer.cpp
open3d/src/: TestVisualizer.cpp
opengl_start/: CMakeLists.txt
opengl_start/res/: basic.shader
opengl_start/src/: main.cc  main.cpp
osi-webviz/: index.html  package.json  run.sh
osi-webviz/src/: main.js
ray_tracer/: bazel-bin  bazel-testlogs
ray_tracer/src/: prim.h  rt_util.h
ray_tracing_in_one_weekend/: CMakeLists.txt  README.md  WORKSPACE
ray_tracing_in_one_weekend/src/: camera.h  main.cc  prim_list.h  sphere.h
raytracer/: .clang-format  BUILD  WORKSPACE  bazel-bin  bazel-out  bazel-ray_tracer  bazel-testlogs  image.raw
raytracer/src/: main.cc  vec3.h
vulkan/bin_x64/Release/: vk_ray_tracing__advance_KHR_app  vk_ray_tracing__before_KHR_app  vk_ray_tracing__simple_KHR_app  vk_ray_tracing_advanced_compilation_KHR_app  vk_ray_tracing_animation_KHR_app  vk_ray_tracing_anyhit_KHR_app  vk_ray_tracing_ao_KHR_app  vk_ray_tracing_callable_KHR_app  vk_ray_tracing_gltf_KHR_app  vk_ray_tracing_indirect_scissor_KHR_app  vk_ray_tracing_instances_KHR_app  vk_ray_tracing_intersection_KHR_app  vk_ray_tracing_jitter_cam_KHR_app  vk_ray_tracing_manyhits_KHR_app  vk_ray_tracing_motionblur_KHR_app  vk_ray_tracing_rayquery_KHR_app  vk_ray_tracing_reflections_KHR_app  vk_ray_tracing_specialization_KHR_app
